# arm-architecture

./: .gitignore  Makefile  README.md  meson.build
docs/project-history/2020/2020-09/: 2020-09-29T18:30:26Z_note_pgX_qM_URbYb2mFw.md
src/: meson.build
src/arch/: arm_common_arch.cpp  arm_common_arch.hpp  arm_cortex_m.hpp  meson.build
src/drivers/: meson.build  nvic.cpp  nvic.hpp
src/linker/: gcc_arm_common.ld
src/utilities/: arm_interrupt_condition.hpp  arm_interrupt_lock.hpp  meson.build  thumb_interrupt_lock.hpp
subprojects/: cmsis-5.wrap
subprojects/packagefiles/: CMSIS_5-5.7.0.tgz  cmsis-5.tgz
subprojects/packagefiles/cmsis-5-build/: meson.build
tools/: Jenkinsfile
